Fixed wrong formatting on smaller screens

--- a/_src/scss/module/_schedule.scss
+++ b/_src/scss/module/_schedule.scss
@@ -56,8 +56,21 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
   
+    @media (max-width: 900px) {
+      flex-direction: column;
+      align-items: flex-start;
+  
+      .event-title {
+        margin-bottom: 0.5rem;
+      }
+  
+      .price {
+        align-self: flex-start;
+      }
+    }
+  }
+    
   .event-title {
     margin-bottom: 0.5rem;
     font-size: 1.2rem;
